Revert "Log GC info during benchmarks"
This reverts commit 26b5a67c8945430b3adda6ec384583d40b8b733a.