@@ -21,11 +21,11 @@ cd ../benchmark &&\
 PATH="${NO_GIT_PATH}" mvn -DskipTests ${MAYBE_ANDROID_FLAG} package &&\
 cd target &&\
 if [ "$TRAVIS" = "true" ]; then
-    java -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -jar benchmarks.jar -f 1 -t 1 -foe true &&\
-    java -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -jar benchmarks.jar -f 1 -t 2 -foe true
+    java -jar benchmarks.jar -f 1 -t 1 -foe true &&\
+    java -jar benchmarks.jar -f 1 -t 2 -foe true
 else
-    java -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -jar benchmarks.jar -f 1 -t 1 -foe true -v EXTRA 2>&1 |\
+    java -jar benchmarks.jar -f 1 -t 1 -foe true -v EXTRA 2>&1 |\
         /usr/bin/tee benchmark_results_one_thread.txt &&\
-    java -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -jar benchmarks.jar -f 1 -t 2 -foe true -v EXTRA 2>&1 |\
+    java -jar benchmarks.jar -f 1 -t 2 -foe true -v EXTRA 2>&1 |\
         /usr/bin/tee benchmark_results_two_threads.txt
 fi && cd ../..
